Fix tsconfig and add tailwindcss

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,26 @@
 {
   "files": [],
+  "include": [
+    "src/renderer/src/env.d.ts",
+    "src/renderer/src/**/*",
+    "src/renderer/src/stores/**/*",
+    "src/renderer/src/**/*.vue",
+    "src/preload/*.d.ts"
+  ],
+  "compilerOptions": {
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@renderer/*": [
+        "src/renderer/src/*"
+      ],
+      "@components/*": [
+        "src/renderer/src/components/*"
+      ],
+      "@stores/*": [
+        "src/renderer/src/stores/*"
+      ]
+    }
+  },
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
 }
