--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
+    "@vue-flow/background": "^1.2.0",
+    "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.26.0",
+    "@vue-flow/minimap": "^1.2.0",
     "pinia": "^2.1.7"
   },
   "devDependencies": {
