--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,8 @@
 {
-  "singleQuote": true,
-  "semi": true,
-  "printWidth": 100
+    "plugins": [
+        "prettier-plugin-tailwindcss"
+    ],
+    "singleQuote": true,
+    "semi": true,
+    "printWidth": 100
 }
