--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
