--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/stores/**/*",
+    "src/renderer/src/composables/**/*",
     "src/renderer/src/**/*.vue",
     "src/preload/*.d.ts"
   ],
@@ -17,9 +18,12 @@
       "@components/*": [
         "src/renderer/src/components/*"
       ],
-      "@stores/*": [
-        "src/renderer/src/stores/*"
-      ]
+        "@stores/*": [
+            "src/renderer/src/stores/*"
+        ],
+        "@composables/*": [
+            "src/renderer/src/composables/*"
+        ]
     }
   },
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
