Add column form variables and install vueMacro

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,46 @@
 {
-  "files": [],
-  "include": [
-    "src/renderer/src/env.d.ts",
-    "src/renderer/src/**/*",
-    "src/renderer/src/stores/**/*",
-    "src/renderer/src/composables/**/*",
-    "src/renderer/src/**/*.vue",
-    "src/preload/*.d.ts"
-  ],
-  "compilerOptions": {
-    "composite": true,
-    "baseUrl": ".",
-    "paths": {
-      "@renderer/*": [
-        "src/renderer/src/*"
-      ],
-      "@components/*": [
-        "src/renderer/src/components/*"
-      ],
-        "@stores/*": [
-            "src/renderer/src/stores/*"
+    "files": [],
+    "include": [
+        "src/renderer/src/env.d.ts",
+        "src/renderer/src/**/*",
+        "src/renderer/src/stores/**/*",
+        "src/renderer/src/composables/**/*",
+        "src/renderer/src/**/*.vue",
+        "src/preload/*.d.ts"
+    ],
+    "compilerOptions": {
+        "composite": true,
+        "baseUrl": ".",
+        "types": [
+            "unplugin-vue-macros/macros-global"
         ],
-        "@composables/*": [
-            "src/renderer/src/composables/*"
+        "paths": {
+            "@renderer/*": [
+                "src/renderer/src/*"
+            ],
+            "@components/*": [
+                "src/renderer/src/components/*"
+            ],
+            "@stores/*": [
+                "src/renderer/src/stores/*"
+            ],
+            "@composables/*": [
+                "src/renderer/src/composables/*"
+            ]
+        }
+    },
+    "vueCompilerOptions": {
+        "target": 3,
+        "plugins": [
+            "@vue-macros/volar/define-models"
         ]
-    }
-  },
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
+    },
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        },
+        {
+            "path": "./tsconfig.web.json"
+        }
+    ]
 }
