--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6",
+    "unplugin-vue-macros": "^2.7.0",
     "vite": "^4.4.9",
     "vue": "^3.3.4",
     "vue-tsc": "^1.8.8"
