--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "@floating-ui/dom": "^1.5.3",
+    "@types/lodash": "^4.14.202",
     "@vue-flow/background": "^1.2.0",
     "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.26.0",
     "@vue-flow/minimap": "^1.2.0",
     "animejs": "^3.2.1",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7"
   },
   "devDependencies": {
