--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "animejs": "^3.2.1",
     "cleave-zen": "^0.0.9",
     "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
     "pinia": "^2.1.7"
   },
   "devDependencies": {
