--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "app",
+  "name": "schemasparkle",
   "version": "1.0.0",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "author": "Finestwork",
+  "homepage": "https://github.com/Finestwork/schema-sparkle",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
