--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,39 +1,19 @@
 {
-  "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
-    "include": [
-        "src/renderer/src/env.d.ts",
-        "src/renderer/src/**/*",
-        "src/renderer/src/stores/**/*",
-        "src/renderer/src/composables/**/*",
-        "src/renderer/src/**/*.vue",
-        "src/preload/*.d.ts"
+    "extends": [
+        "@electron-toolkit/tsconfig/tsconfig.web.json",
+        "./tsconfig.aliases.json"
+    ],
+    "files": [
+        "node_modules/@vue-macros/define-models/macros-global.d.ts"
     ],
     "compilerOptions": {
         "composite": true,
         "baseUrl": ".",
         "types": [
             "unplugin-vue-macros/macros-global"
-        ],
-        "paths": {
-            "@renderer/*": [
-                "src/renderer/src/*"
-            ],
-            "@components/*": [
-                "src/renderer/src/components/*"
-            ],
-            "@stores/*": [
-                "src/renderer/src/stores/*"
-            ],
-            "@stores/dummy/*": [
-                "src/renderer/src/stores/dummy/*"
-            ],
-            "@composables/*": [
-                "src/renderer/src/composables/*"
-            ],
-        }
+        ]
     },
     "vueCompilerOptions": {
-        "target": 3,
         "plugins": [
             "@vue-macros/volar/define-models"
         ]
