--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/node": "^18.17.5",
     "@vitejs/plugin-vue": "^4.3.1",
+    "@vue-macros/volar": "^0.17.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "autoprefixer": "^10.4.16",
