--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/node": "^18.17.5",
+    "@types/numeral": "^2.0.5",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue-macros/volar": "^0.17.4",
     "@vue/eslint-config-prettier": "^8.0.0",
