Add layout changer

--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.26.0",
     "@vue-flow/minimap": "^1.2.0",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/integrations": "^10.7.0",
     "animejs": "^3.2.1",
     "bounce.js": "^0.8.2",
     "cleave-zen": "^0.0.9",
     "dagre": "^0.8.5",
+    "focus-trap": "^7.5.4",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "pinia": "^2.1.7",
