--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,8 @@
 {
-  "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
+  "extends": [
+      "@electron-toolkit/tsconfig/tsconfig.node.json",
+      "./tsconfig.aliases.json"
+  ],
   "include": ["electron.vite.config.*",
       "src/main/*",
       "src/preload/*"
