--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "klona": "^2.0.6",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "overlayscrollbars": "^2.4.5",
+    "overlayscrollbars-vue": "^0.5.6",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1"
   },
