Use provide/inject pattern instead of prop drilling

--- a/tsconfig.aliases.json
+++ b/tsconfig.aliases.json
@@ -25,6 +25,9 @@
             ],
             "@utilities/*": [
                 "src/renderer/src/utilities/*"
+            ],
+            "@symbols/*": [
+                "src/renderer/src/symbols/*"
             ]
         }
     }
