--- a/tsconfig.aliases.json
+++ b/tsconfig.aliases.json
@@ -8,8 +8,11 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@renderer/*": [
-                "src/renderer/src/*"
+            "@assets/*": [
+                "src/renderer/src/assets/*"
+            ],
+            "@directives/*": [
+                "src/renderer/src/directives/*"
             ],
             "@components/*": [
                 "src/renderer/src/components/*"
