--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "overlayscrollbars": "^2.4.5",
     "overlayscrollbars-vue": "^0.5.6",
     "pinia": "^2.1.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vue-draggable-plus": "^0.3.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
