--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "klona": "^2.0.6",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "openai": "^4.24.1",
     "overlayscrollbars": "^2.4.5",
     "overlayscrollbars-vue": "^0.5.6",
     "pinia": "^2.1.7",
