--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "overlayscrollbars": "^2.4.5",
     "overlayscrollbars-vue": "^0.5.6",
     "pinia": "^2.1.7",
+    "sql.js": "^1.9.0",
     "uuid": "^9.0.1",
     "vue-draggable-plus": "^0.3.3",
     "vuedraggable": "^4.1.0"
