--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
         "overlayscrollbars": "^2.4.5",
         "overlayscrollbars-vue": "^0.5.6",
         "pinia": "^2.1.7",
+        "sql-ddl-to-json-schema": "^4.1.0",
+        "sql.js": "^1.9.0",
         "uuid": "^9.0.1",
         "vue-draggable-plus": "^0.3.3",
         "vuedraggable": "^4.1.0"
