--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
         "html-to-image": "^1.11.11",
         "klona": "^2.0.6",
         "lodash": "^4.17.21",
+        "monaco-editor": "^0.45.0",
         "numeral": "^2.0.6",
-        "openai": "^4.24.1",
         "overlayscrollbars": "^2.4.5",
         "overlayscrollbars-vue": "^0.5.6",
         "pinia": "^2.1.7",
