Create functionality to execute query

--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
         "html-to-image": "^1.11.11",
         "klona": "^2.0.6",
         "lodash": "^4.17.21",
+        "lottie-web": "^5.12.2",
         "monaco-editor": "^0.45.0",
+        "mysql2": "^3.7.0",
         "numeral": "^2.0.6",
         "overlayscrollbars": "^2.4.5",
         "overlayscrollbars-vue": "^0.5.6",
