--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@floating-ui/dom": "^1.5.3",
         "@floating-ui/vue": "^1.0.2",
         "@types/lodash": "^4.14.202",
+        "@types/nprogress": "^0.2.3",
         "@vue-flow/background": "^1.2.0",
         "@vue-flow/controls": "^1.1.0",
         "@vue-flow/core": "^1.26.0",
@@ -66,6 +67,7 @@
         "lottie-web": "^5.12.2",
         "monaco-editor": "^0.45.0",
         "mysql2": "^3.7.0",
+        "nprogress": "^0.2.0",
         "numeral": "^2.0.6",
         "overlayscrollbars": "^2.4.5",
         "overlayscrollbars-vue": "^0.5.6",
