Add more sql autocomplete

--- a/tsconfig.aliases.json
+++ b/tsconfig.aliases.json
@@ -41,6 +41,9 @@
             ],
             "@lottie/*": [
                 "src/renderer/src/lottie/*"
+            ],
+            "@autocomplete/*": [
+                "src/renderer/src/autocomplete/*"
             ]
         }
     }
