--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "lodash": "^4.17.21",
         "lottie-web": "^5.12.2",
         "monaco-editor": "^0.45.0",
+        "monaco-sql-languages": "^0.12.0-beta.10",
         "mysql2": "^3.7.0",
         "nprogress": "^0.2.0",
         "numeral": "^2.0.6",
@@ -89,6 +90,7 @@
         "@vue-macros/volar": "^0.17.4",
         "@vue/eslint-config-prettier": "^8.0.0",
         "@vue/eslint-config-typescript": "^11.0.3",
+        "assert": "^2.1.0",
         "autoprefixer": "^10.4.16",
         "electron": "^25.6.0",
         "electron-builder": "^24.6.3",
@@ -102,6 +104,7 @@
         "tailwindcss": "^3.3.5",
         "typescript": "^5.1.6",
         "unplugin-vue-macros": "^2.7.0",
+        "util": "^0.12.5",
         "vite": "^4.5.1",
         "vue": "^3.3.4",
         "vue-tsc": "^1.8.8"
