--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "autoprefixer": "^10.4.16",
         "electron": "^25.6.0",
         "electron-builder": "^24.6.3",
+        "electron-devtools-installer": "^3.2.0",
         "electron-vite": "^1.0.29",
         "eslint": "^8.47.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
